# docs/swagger.yaml
@@ -15,6 +15,8 @@ definitions:
         type: string
       rental_id:
         type: integer
+      status:
+        type: string
       total_price:
         type: integer
     type: object
@@ -30,14 +32,27 @@ definitions:
       password:
         type: string
     type: object
+  models.Author:
+    properties:
+      birth_date:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      nationality:
+        type: string
+    type: object
   models.Book:
     properties:
       ISBN:
         type: string
       author:
-        type: string
+        $ref: '#/definitions/models.Author'
       category:
-        type: string
+        $ref: '#/definitions/models.Category'
       id:
         type: integer
       price:
@@ -47,6 +62,13 @@ definitions:
       stock:
         type: integer
       title:
+        type: string
+    type: object
+  models.Category:
+    properties:
+      id:
+        type: integer
+      name:
         type: string
     type: object
   models.User:
@@ -248,6 +270,50 @@ paths:
       summary: Create a new order
       tags:
       - Orders
+  /pay/{order_id}:
+    post:
+      consumes:
+      - application/json
+      description: Allows a user to pay for a specific order by ID.
+      parameters:
+      - description: Order ID
+        in: path
+        name: order_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Payment successful
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid order ID or order already paid
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized to pay for this order
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Order not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error while processing payment
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Pay for an order
+      tags:
+      - Payments
   /rentals:
     get:
       description: Get all rentals made by the user
@@ -267,6 +333,50 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get user rentals
+      tags:
+      - Rentals
+  /return/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Allows a user to return a book by ID that they have rented.
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Book returned successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid book ID
+          schema:
+            additionalProperties: true
+            type: object
+        "403":
+          description: Unauthorized to return this book
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Rental detail not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error while processing return
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Return a book
       tags:
       - Rentals
   /topup:
